--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login-Helper</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src="../js/index.js"defer></script>
+    <title>login-Ubeka</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js"defer></script>
+    
 
 <link rel = "preconnect" href = "https://fonts.googleapis.com">
 <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
