--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <form>
           <section class="inputs-container">
             <input type="email" placeholder="example@gmail.com">
-
             <div class="password-container">
                 <input type="password" id="fied-password" class="field-passwword" placeholder="********">
                 <i class="fas fa-eye" id="eye" onclick="showPassword()"></i>
@@ -54,6 +53,7 @@
             <footer>
                 <hr>
                 <span>Ainda não tem uma conta? <a href="#">Cadastra-se</a></span>
+                <P class="para">Criado por <a href="https://github.com/nicolau10/ProjectoLogin"><abbr title="Eng.Software">Nicolau Oliveira</a></abbr></P>
             </footer>
         </form>
     </main>
